Revision history for CHI::Driver::SharedMem

0.19
	Panic if the shm segment is lost

0.18	Tue Aug 15 20:03:16 EDT 2023
	Implement LRU when the shared memory segment is full

0.17	Sat Aug 12 21:41:26 EDT 2023
	Dabble without a locking system, let's see if CHI can handle that
	API Change: size is now shm_size; shmkey is now shm_key

0.16	Fri Aug 11 16:04:17 EDT 2023
	Use a common lock - previously locks were app named
	Fix occasional errors in DEMOLISH trying to lock the file after it's
		gone away

0.15	Wed Aug  9 20:32:43 EDT 2023
	Use JSON instead of Storable, it's more reliable
	Remove the shared memory area when running 'make test'
	Remove the shared area if it's only full of expired keys and it's about to
		become unreferenced

0.14	Thu 23 Jan 10:34:54 EST 2014
	Fix a rare condition where the data fails to read
	Added work around for RT89892
	Use Test::Most instead of Test::More
	Added t/strict.t

0.13	Mon Sep 17 09:20:58 BST 2012
	Handle race condition which could result in an error when two processes
		try to remove the same empty shared memory area when they
		terminate

0.12	Mon Sep  3 08:22:39 BST 2012
	t/01-new.t: Handle 'Bad System Call' within Cygwin
	Use read locks where possible

0.11	Fri Aug 31 08:31:20 BST 2012
	Use flock instead of IPC::Semaphore::Concurrency
	if($value) corrected to if(defined($value))

0.10	Wed Aug 22 13:53:49 BST 2012
	Use ftok to generate the shmkey in the test
	Don't try to build on GNU/Hurd
	Lock the shared memory area during accesses

0.09	Sat Aug 18 17:57:40 BST 2012
	Use $Config{intsize} do determine the size of an int
	Croak if the shared memory area can't be created

0.08	Wed Aug 15 08:31:38 BST 2012
	Added test that the shared memory area is deleted on cleanup
	Ensure using the latest version of CHI::Stats
	Don't set the execute bit in the shared memory area
	Store the size as an int rather than 32 bits

0.07	Mon Aug 13 09:04:17 BST 2012
	Attach to the shared memory area