@@ -106,7 +106,6 @@ The data are serialized into JSON.
 sub store {
 	my($self, $key, $value) = @_;
 
-	$self->_lock(type => 'write');
 	my $h = $self->_data();
 	$h->{$self->namespace()}->{$key} = $value;
 	# if($self->{'is_size_aware'}) {
@@ -127,12 +126,10 @@ sub fetch {
 
 	# open(my $tulip, '>>', '/tmp/tulip');
 	# print $tulip __LINE__, "\n";
-	$self->_lock(type => 'read');
 	# print $tulip __LINE__, "\n";
 	my $rc = $self->_data()->{$self->namespace()}->{$key};
 	# print $tulip __LINE__, "\n";
 	if($self->{is_size_aware}) {
-		$self->_lock(type => 'write');
 		my $h = $self->_data();
 		$h->{CHI_Meta_Namespace()}->{last_used_time}->{$key} = time;
 		$self->_data($h);
@@ -152,7 +149,6 @@ Remove an object from the cache
 sub remove {
 	my($self, $key) = @_;
 
-	$self->_lock(type => 'write');
 	my $h = $self->_data();
 	delete $h->{$self->namespace()}->{$key};
 	delete $h->{CHI_Meta_Namespace()}->{last_used_time}->{$key};
@@ -172,7 +168,6 @@ Removes all data from the current namespace
 sub clear {
 	my $self = shift;
 
-	$self->_lock(type => 'write');
 	my $h = $self->_data();
 	delete $h->{$self->namespace()};
 	$self->_data($h);
@@ -191,7 +186,6 @@ Gets a list of the keys in the current namespace
 sub get_keys {
 	my $self = shift;
 
-	$self->_lock(type => 'read');
 	my $h = $self->_data();
 	$self->_unlock();
 	return(keys(%{$h->{$self->namespace()}}));
@@ -206,7 +200,6 @@ Gets a list of the namespaces in the cache
 sub get_namespaces {
 	my $self = shift;
 
-	$self->_lock(type => 'read');
 	my $rc = $self->_data();
 	$self->_unlock();
 	# Needs to be sorted for RT89892
@@ -232,7 +225,6 @@ sub discard_policy_lru {
 	# return;	# debugging why I get uninitialized values in the sort
 	my $self = shift;
 
-	$self->_lock(type => 'read');
 	my $last_used_time = $self->_data()->{CHI_Meta_Namespace()}->{last_used_time};
 	$self->_unlock();
 	my @keys_in_lru_order =
@@ -269,53 +261,52 @@ sub _build_shm {
 }
 
 sub _build_lock {
-	return;
-
 	my $self = shift;
 
 	# open(my $fd, '<', $0) || croak("$0: $!");
 	# FIXME: make it unique for each object, not a singleton
 	$self->lock_file('/tmp/' . __PACKAGE__);
-	# open(my $tulip, '>>', '/tmp/tulip');
-	# print $tulip "build_lock\n", $self->lock_file(), "\n";
+	open(my $tulip, '>>', '/tmp/tulip');
+	print $tulip "build_lock\n", $self->lock_file(), "\n";
 	open(my $fd, '>', $self->lock_file()) || croak($self->lock_file(), ": $!");
+	close $tulip;
 	return $fd;
 }
 
 sub _lock {
-	return;
-
 	my ($self, %params) = @_;
 
-	# open(my $tulip, '>>', '/tmp/tulip');
-	# print $tulip $params{'type'}, ' lock ', $self->lock_file(), "\n";
-	# my $i = 0;
-	# while((my @call_details = (caller($i++)))) {
-		# print $tulip "\t", $call_details[1], ':', $call_details[2], ' in function ', $call_details[3], "\n";
-	# }
+	open(my $tulip, '>>', '/tmp/tulip');
+	print $tulip $params{'type'}, ' lock ', $self->lock_file(), "\n";
+	my $i = 0;
+	while((my @call_details = (caller($i++)))) {
+		print $tulip "\t", $call_details[1], ':', $call_details[2], ' in function ', $call_details[3], "\n";
+	}
 	return unless $self->lock_file();
 
 	if(my $lock = $self->lock()) {
+		print $tulip "locking\n";
 		flock($lock, ($params{type} eq 'read') ? Fcntl::LOCK_SH : Fcntl::LOCK_EX);
 	} else {
-		# print $tulip 'lost lock ', $self->lock_file(), "\n";
+		print $tulip 'lost lock ', $self->lock_file(), "\n";
 		croak('Lost lock: ', $self->lock_file());
 	}
+	print $tulip "locked\n";
+	close $tulip;
 }
 
 sub _unlock {
-	return;
-
 	my $self = shift;
 
-	# open(my $tulip, '>>', '/tmp/tulip');
-	# print $tulip 'unlock ', $self->lock_file(), "\n";
+	open(my $tulip, '>>', '/tmp/tulip');
+	print $tulip 'unlock ', $self->lock_file(), "\n";
 	if(my $lock = $self->lock()) {
 		flock($lock, Fcntl::LOCK_UN);
 	} else {
-		# print $tulip 'lost lock for unlock ', $self->lock_file(), "\n";
+		print $tulip 'lost lock for unlock ', $self->lock_file(), "\n";
 		croak('Lost lock for unlock: ', $self->lock_file());
 	}
+	close $tulip;
 }
 
 # The area must be locked by the caller
@@ -327,10 +318,14 @@ sub _data_size {
 		return 0;
 	}
 	if(defined($value)) {
+		$self->_lock(type => 'write');
 		$self->shm()->write(pack('I', $value), 0, $Config{intsize});
+		$self->_unlock();
 		return $value;
 	}
+	$self->_lock(type => 'read');
 	my $size = $self->shm()->read(0, $Config{intsize});
+	$self->_unlock();
 	unless(defined($size)) {
 		return 0;
 	}
@@ -341,31 +336,37 @@ sub _data_size {
 sub _data {
 	my($self, $h) = @_;
 
-	# open(my $tulip, '>>', '/tmp/tulip');
-	# print $tulip __LINE__, "\n";
+	open(my $tulip, '>>', '/tmp/tulip');
+	print $tulip __LINE__, "\n";
 	if(defined($h)) {
 		my $f = JSON::MaybeXS->new()->ascii()->encode($h);
 		my $cur_size = length($f);
-		# print $tulip __LINE__, "cmp $cur_size > ", $self->size(), "\n";
+		print $tulip __LINE__, " cmp $cur_size > ", $self->shm_size(), "\n";
 		if($cur_size > ($self->shm_size() - $Config{intsize})) {
 			croak("sharedmem set failed - value too large? ($cur_size bytes) > ", $self->shm_size());
 		}
+		$self->_lock(type => 'write');
 		$self->shm()->write($f, $Config{intsize}, $cur_size);
 		$self->_data_size($cur_size);
+		$self->_unlock();
 		# print $tulip "set: $cur_size bytes\n";
 		# close $tulip;
 		return $h;
 	}
+	$self->_lock(type => 'read');
 	my $cur_size = $self->_data_size();
-	# print $tulip "get: $cur_size bytes\n";
-	# close $tulip;
+	$self->_unlock();
+	print $tulip "get: $cur_size bytes\n";
+	close $tulip;
 	if($cur_size) {
 		my $rc;
 		eval {
 			$rc = JSON::MaybeXS->new()->ascii()->decode($self->shm()->read($Config{intsize}, $cur_size));
 		};
 		if($@) {
+			$self->_lock(type => 'write');
 			$self->_data_size(0);
+			$self->_unlock();
 			croak($@);
 		}
 		return $rc;
